<resources>
    <string name="app_name" translatable="false">Real Note</string>
    <string name="title">Title</string>
    <string name="main_activity_title">Your notes</string>
    <string name="insert_note_here_text">Insert note here</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="note_saved_message">Note saved</string>
    <string name="error_log_in">Login proble occured</string>
    <string name="wait">Wait a sec...</string>
    <string name="logged_as">Logged as: %s</string>
    <string name="not_logged">User not logged in</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_email">Sign in with email</string>
    <string name="available_soon">Available soon...</string>
    <string name="login_required">To use the application, log in to one of the available methods.</string>
    <string name="share">Share</string>
    <string name="share_email">Type email to share</string>
    <string name="share_button">Share</string>
    <string name="close_button">Close</string>
    <string name="register_button">Register account</string>
    <string name="login_email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Re-password</string>
    <string name="login_action">Log in</string>
    <string name="logout_action">Logout</string>
    <string name="register_action">Sign In</string>
    <string name="login_button">Log in with email</string>
    <string name="emptyNotesText">Wygląda na to, że nie posiadasz jeszcze żadnych notatek. Aby dodać nową, naciśnij tutaj.</string>

</resources>
