<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:background="@color/cardBackground"
    android:elevation="8dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <include
            layout="@layout/login_elements"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/actionButton" />

        <Button
            android:id="@+id/actionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/changeStateButton"
            android:background="@color/accent"
            android:text="@string/login_action"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/changeStateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/closeButton"
            android:layout_marginTop="8dp"
            android:background="@color/primary"

            android:text="@string/register_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/closeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:background="@color/primary_dark"
            android:text="@string/close_button"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</android.support.v7.widget.CardView>